Update Landing Page

--- a/Sendex_App/templates/home.html
+++ b/Sendex_App/templates/home.html
@@ -32,13 +32,14 @@
       .gradient {
         background: linear-gradient(90deg, #ffffff 0%, #fdfdfd 100%);
       }
+	  
 	</style>
   </head>
 	<body class=" home leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
 <!-- Header Section -->
 <header>
 	<nav id="header" class="fixed bg-fixed w-full z-30 top-0 navbar navbar-expand-lg bg-blue-900">
-		<div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
+		<div class="w-full container flex flex-wrap items-center justify-between mt-0 py-2">
 			<div class="logo bg-blue-900">
 				<a class="navbar-brand" href="/">
 					<img src="{% static 'img/logo.png' %}" alt="logo">
@@ -86,8 +87,9 @@
 			<div class="row mb-5">
 				
 				<div class="col-md-6 my-5 py-5 flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-					<h1 class="mt-5 text-5xl font-bold leading-tight">Unlock Your Potential with Expert Writing Services</h1>
-					<p class="leading-normal text-2xl mb-8">From Academic Excellence to Professional Success</p>
+					<h1 class="mt-5 text-5xl font-bold leading-tight">Your Reliable Logistic Partner</h1>
+					<p class="leading-normal text-2xl mb-8">We are a trusted logistics and shipping platform. We simplify the process of sending and receiving packages, offering you with seamless, secure, and efficient delivery solutions</p>
+					<p class="leading-normal text-2xl mb-8"> Experience hassle-free logistics with SendEX today!</p>
 					<a href="#services" class="btn btn-lg mt-5 btn-success mx-auto lg:mx-0 hover:underline text-gray-800 bg-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"> Explore Our Services   </a> 
 			</div>
 			<div class="col-md-6 my-5 w-full md:w-3/5 py-6 text-center">
@@ -126,7 +128,7 @@
 				<div class="col-md-9 mx-auto text-center mt-5">
 					<h1 class="text-lead my-4 w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Who we are</h1>
 					<h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-						Welcome to HaminWriter, your partner in achieving academic and professional excellence.
+						Welcome to SendEX, your trusted logistics and shipping platform.
 					</h3>
 				</div>
 				<div class="w-full mb-4">
@@ -134,12 +136,10 @@
 				</div>
         <div class="flex flex-wrap">
           <div class="row-cols-0 w-5/6 sm:w-1/2 p-6 text-gray-600 text-justify mb-8">
-			We Provide High-Quality Writing Services for Academic and Professional Excellence.
-			We are a team of passionate writers and professionals dedicated to helping you excel in your academic and professional endeavors.
-			<p>Our mission is to provide top-quality writing services that empower you to achieve your goals and dreams.</p>
-			<p>With years of experience in various fields, our writers bring expertise and creativity to every project. Whether you need assistance with academic papers, business plans, or professional resumes, we are here to deliver tailored solutions that exceed your expectations.</p>
-			<p>At HaminWriter, we believe in the power of words to shape the future. We are committed to delivering exceptional content that not only meets your requirements but also inspires and influences others. Our commitment to excellence drives us to continuously improve and innovate, ensuring that you receive the best possible service.</p>
-
+			We simplify the process of sending and receiving packages, providing you with seamless, 
+			secure, and efficient delivery solutions. Whether you're a business looking to streamline 
+			your shipments or an individual sending a package to a loved one, SendEX is here to make it easy, fast, and dependable. 
+			Experience hassle-free logistics with SendEX today!"
 			  <!-- <p class="text-gray-600 text-justify mb-8">
 				Our writing service is a custom writing service that makes college life and office work easier. 
 						We help students and professionals make their busy days hassle-free. 
@@ -164,8 +164,7 @@
 					<div class="w-full mb-4">
 						<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 					  </div>
-					<p>We offer all types of academic and professional papers. If you find it hard to balance 
-						studies with the rest of your life &#8211; our service is just for you. 
+					<p>We offer a simple logistics and shipping services for both personal use and businesses &#8211; our service is just for you. 
 						You would appreciate it too so don&#8217;t be shy to recommend us!</p>
 				</div>
 			</div>
@@ -180,11 +179,10 @@
 					<div class="card text-center flex-1 bg-white rounded-t rounded-b-none overflow-hidden">
 						<div class="card-body ">
 							<div class="w-full font-bold text-xl text-gray-800 px-6">
-								<h5 class="card-title"> Academic Writing </h5>
+								<h5 class="card-title"> Package Shipping </h5>
 							</div>
 							<p class="card-text text-gray-800 text-base px-6 mb-5">
-								We offer all types of academic papers. If you find it hard to balance 
-								studies with the rest of your life &#8211; our service is just for you.</p>
+								Efficient and secure shipping solutions for your packages.</p>
 						</div>
 					</div>
 				</div>
@@ -193,11 +191,10 @@
 							<div class="card text-center">
 								<div class="card-body">
 								<div class="w-full font-bold text-xl text-gray-800 px-6">
-									<h5 class="card-title"> Business Plans </h5>
+									<h5 class="card-title"> Secure Tracking </h5>
 								</div>
 							<p class="card-text text-gray-800 text-base px-6 mb-5">
-								We offer all types of academic papers. If you find it hard to balance
-								studies with the rest of your life &#8211; our service is just for you.
+								Track your shipments with real-time, secure tracking systems.
 							</p>
 								</div>
 							</div>
@@ -207,12 +204,10 @@
 					<div class="card text-center">
 						<div class="card-body">
 							<div class="w-full font-bold text-xl text-gray-800 px-6">
-								<h5 class="card-title">Professional Resume </h5>
+								<h5 class="card-title">On-Time Delivery </h5>
 							</div>
 							<p class="card-text text-gray-800 text-base px-6 mb-5">
-								We offer all types of academic papers. If you find it hard to balance
-								studies with the rest of your life &#8211; our service is just for you.
-								                    </p>
+								Reliable and on-time delivery of your packages to their destination.								                    </p>
 						</div>
 					</div>
 				</div>
