--- a/Sendex_App/templates/home.html
+++ b/Sendex_App/templates/home.html
@@ -38,7 +38,7 @@
 	<body class=" home leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
 <!-- Header Section -->
 <header>
-	<nav id="header" class="fixed bg-fixed w-full z-30 top-0 navbar navbar-expand-lg bg-blue-900">
+	<nav id="header" class="bg-fixed w-full z-30 top-0 navbar navbar-expand-lg bg-blue-900">
 		<div class="w-full container flex flex-wrap items-center justify-between mt-0 py-2">
 			<div class="logo bg-blue-900">
 				<a class="navbar-brand" href="/">
@@ -215,34 +215,6 @@
 	</div>
 </section>
 
-<!-- Why Choose SmartWriter Section -->
-<section class="why-choose hero">
-    <div class="container my-5">
-        <div class="row">
-            <div class="col-md-9 mx-auto text-center">
-                <h1 class="text-lead my-4 w-full text-5xl font-bold leading-tight text-center text-gray-800">Why Choose SmartWriter</h1>
-                <div class="row">
-                    <div class="col-md-4 mb-4">
-                        <i class="fa fa-check-circle fa-3x mb-3"></i>
-						<h4>High-Quality Content</h4>
-						<p>Our team of expert writers ensures top-notch quality in every piece of writing.</p>
-					</div>
-                    <div class="col-md-4 mb-4">
-                        <i class="fa fa-graduation-cap fa-3x mb-3"></i>
-                        <h4>Expert Writers</h4>
-                        <p>Our team of experienced writers ensures top-quality content for your needs.</p>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <i class="fa fa-lock fa-3x mb-3"></i>
-                        <h4>Confidentiality</h4>
-                        <p>Your information is safe with us. We prioritize your privacy.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
     <section class="container hero mx-auto text-center py-6 mb-12">
       <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
         Ready to Get Started?
@@ -251,9 +223,9 @@
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
       </div>
       <h6 class="my-4 text-2xl leading-tight">
-		Empower yourself with our expert writing services. Whether it's an academic assignment, business document, or creative project, we've got you covered.</h6>
+		We simplify the process of sending and receiving packages.</h6>
 		<a href="/orders/templates/orders/place_order.html" class="btn btn-primary mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-			Place an Order
+			Signup Now!
 		</a>
     </section>
 
@@ -268,8 +240,9 @@
 			<div class="row">
 			<div class="col-sm-12 col-md-6">
 				<h6>About</h6>
-				<p class="text-justify">We are a team of passionate writers and professionals dedicated to helping you excel in your academic and professional endeavors. Our mission is to provide top-quality writing services that empower you to achieve your goals and dreams.</p>
-				<p class="text-justify">With years of experience in various fields, our writers bring expertise and creativity to every project. Whether you need assistance with academic papers, business plans, or professional resumes, we are here to deliver tailored solutions that exceed your expectations.</p>
+				<p class="text-justify">We simplify the process of sending and receiving packages, 
+					providing you with seamless, secure, and efficient delivery solutions.</p>
+
 			</div>
 
 			<div class="col-xs-6 col-md-3">
@@ -296,7 +269,7 @@
 			<div class="row">
 			<div class="col-md-8 col-sm-6 col-xs-12 text-center">
 				<p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by 
-			<a href="leencotech.com">Leen-Co Tech Ltd</a>.
+			<a href="leencotech.com">SendEX NG</a>.
 				</p>
 			</div>
 
@@ -318,9 +291,9 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"></script>
-		<!-- jQuery if you need it
+		<!-- jQuery if you need it -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  -->
+ 
   <script>
 	var scrollpos = window.scrollY;
 	var header = document.getElementById("header");
