--- a/Sendex_App/templates/home.html
+++ b/Sendex_App/templates/home.html
@@ -69,11 +69,11 @@
 
 		{% if user.is_authenticated %}
 				<ul class="navbar-nav white-link">
-				 <a href="/logout/" class="btn btn-success">Logout</a>
+				 <a href="logout/" class="btn btn-success">Logout</a>
 				</ul>
 				{% else %}
 				 <ul class="navbar-nav white-link">
-				 <a href="/register/" class="btn btn-success">Get Started</a>
+				 <a href="accounts/login/" class="btn btn-success">Get Started</a>
 				</ul>
 				{% endif %}
 	   </div>
