--- a/Sendex_App/templates/home.html
+++ b/Sendex_App/templates/home.html
@@ -224,7 +224,7 @@
       </div>
       <h6 class="my-4 text-2xl leading-tight">
 		We simplify the process of sending and receiving packages.</h6>
-		<a href="/orders/templates/orders/place_order.html" class="btn btn-primary mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+		<a href="accounts/s/" class="btn btn-primary mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
 			Signup Now!
 		</a>
     </section>
